Artisan make:test Categories/UpdateTest, CSRM CategoryController@update and artisan scribe:generate.
