# public/docs/openapi.yaml
@@ -9,7 +9,7 @@ servers:
 paths:
     /api/register:
         post:
-            summary: '1-1. Register a user with a personal access token for the device.'
+            summary: 'Register a user with a personal access token for the device.'
             description: ''
             parameters:
                 -
@@ -86,7 +86,7 @@ paths:
             security: []
     /api/login:
         post:
-            summary: '1-2. Login a user with a new personal access token for the device.'
+            summary: 'Login a user with a new personal access token for the device.'
             description: ''
             parameters:
                 -
@@ -158,7 +158,7 @@ paths:
             security: []
     /api/logout:
         post:
-            summary: '1-3. Logout a user with all the personal access tokens being revoked on the device.'
+            summary: 'Logout a user with all the personal access tokens being revoked on the device.'
             description: ''
             parameters:
                 -
@@ -237,8 +237,37 @@ paths:
                             required:
                                 - device_name
     /api/categories:
+        get:
+            summary: 'Display a listing of the categories.'
+            description: ''
+            parameters:
+                -
+                    in: header
+                    name: Accept
+                    description: ''
+                    example: application/json
+                    schema:
+                        type: string
+            responses:
+                200:
+                    description: '200, when categories displayed.'
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                example:
+                                    jsonapi: { version: '2021.02' }
+                                    data: [{ id: 1, type: categories, attributes: { slug: category, name: category, sort: 0, created_at: '1970-01-01 00:00:00', updated_at: '1970-01-01 00:00:00' }, relationships: { user: { data: { id: 1, name: saberLiou, email: saberliou@gmail.com, email_verified_at: null, created_at: '1970-01-01 00:00:00', updated_at: '1970-01-01 00:00:00' } }, posts: [] } }]
+                                    links: { self: 'http://kniflow.test/api/categories' }
+                                properties:
+                                    jsonapi: { type: object, example: { version: '2021.02' } }
+                                    data: { type: array, example: [{ id: 1, type: categories, attributes: { slug: category, name: category, sort: 0, created_at: '1970-01-01 00:00:00', updated_at: '1970-01-01 00:00:00' }, relationships: { user: { data: { id: 1, name: saberLiou, email: saberliou@gmail.com, email_verified_at: null, created_at: '1970-01-01 00:00:00', updated_at: '1970-01-01 00:00:00' } }, posts: [] } }], items: { type: object } }
+                                    links: { type: object, example: { self: 'http://kniflow.test/api/categories' } }
+            tags:
+                - '02. Categories'
+            security: []
         post:
-            summary: '2-2. Store a newly created category in storage.'
+            summary: 'Store a newly created category in storage.'
             description: ''
             parameters:
                 -
@@ -320,38 +349,9 @@ paths:
                                     example: 0
                             required:
                                 - name
-        get:
-            summary: '2-1. Display a listing of the categories.'
-            description: ''
-            parameters:
-                -
-                    in: header
-                    name: Accept
-                    description: ''
-                    example: application/json
-                    schema:
-                        type: string
-            responses:
-                200:
-                    description: '200, when categories displayed.'
-                    content:
-                        application/json:
-                            schema:
-                                type: object
-                                example:
-                                    jsonapi: { version: '2021.02' }
-                                    data: [{ id: 1, type: categories, attributes: { slug: category, name: category, sort: 0, created_at: '1970-01-01 00:00:00', updated_at: '1970-01-01 00:00:00' }, relationships: { user: { data: { id: 1, name: saberLiou, email: saberliou@gmail.com, email_verified_at: null, created_at: '1970-01-01 00:00:00', updated_at: '1970-01-01 00:00:00' } }, posts: [] } }]
-                                    links: { self: 'http://kniflow.test/api/categories' }
-                                properties:
-                                    jsonapi: { type: object, example: { version: '2021.02' } }
-                                    data: { type: array, example: [{ id: 1, type: categories, attributes: { slug: category, name: category, sort: 0, created_at: '1970-01-01 00:00:00', updated_at: '1970-01-01 00:00:00' }, relationships: { user: { data: { id: 1, name: saberLiou, email: saberliou@gmail.com, email_verified_at: null, created_at: '1970-01-01 00:00:00', updated_at: '1970-01-01 00:00:00' } }, posts: [] } }], items: { type: object } }
-                                    links: { type: object, example: { self: 'http://kniflow.test/api/categories' } }
-            tags:
-                - '02. Categories'
-            security: []
     '/api/categories/{category}':
         get:
-            summary: '2-3. Display the specified category.'
+            summary: 'Display the specified category.'
             description: ''
             parameters:
                 -
@@ -391,12 +391,117 @@ paths:
             tags:
                 - '02. Categories'
             security: []
+        put:
+            summary: 'Update the specified category in storage.'
+            description: ''
+            parameters:
+                -
+                    in: header
+                    name: Authorization
+                    description: ''
+                    example: 'Bearer {personal-access-token}'
+                    schema:
+                        type: string
+                -
+                    in: header
+                    name: Accept
+                    description: ''
+                    example: application/json
+                    schema:
+                        type: string
+                -
+                    in: header
+                    name: Content-Type
+                    description: ''
+                    example: application/json
+                    schema:
+                        type: string
+            responses:
+                200:
+                    description: '200, when category updated.'
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                example:
+                                    jsonapi: { version: '2021.02' }
+                                    data: { id: 1, type: categories, attributes: { slug: guo-xun-liu, name: 'Guo-Xun Liu', sort: 1, created_at: '1970-01-01 00:00:02', updated_at: '1970-01-01 00:00:02' }, relationships: { user: { data: { id: 1, name: saberLiou, email: saberliou@gmail.com, email_verified_at: null, created_at: '1970-01-01 00:00:00', updated_at: '1970-01-01 00:00:00' } }, posts: [] } }
+                                    links: { self: 'http://kniflow.test/api/categories' }
+                                properties:
+                                    jsonapi: { type: object, example: { version: '2021.02' } }
+                                    data: { type: object, example: { id: 1, type: categories, attributes: { slug: guo-xun-liu, name: 'Guo-Xun Liu', sort: 1, created_at: '1970-01-01 00:00:02', updated_at: '1970-01-01 00:00:02' }, relationships: { user: { data: { id: 1, name: saberLiou, email: saberliou@gmail.com, email_verified_at: null, created_at: '1970-01-01 00:00:00', updated_at: '1970-01-01 00:00:00' } }, posts: [] } } }
+                                    links: { type: object, example: { self: 'http://kniflow.test/api/categories' } }
+                401:
+                    description: '401, without personal access token.'
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                example:
+                                    jsonapi: { version: '2021.02' }
+                                    errors: [{ status: '401', source: { pointer: '', parameter: '' }, title: Unauthorized, detail: Unauthenticated. }]
+                                properties:
+                                    jsonapi: { type: object, example: { version: '2021.02' } }
+                                    errors: { type: array, example: [{ status: '401', source: { pointer: '', parameter: '' }, title: Unauthorized, detail: Unauthenticated. }], items: { type: object } }
+                403:
+                    description: '403, when category updated by wrong user.'
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                example:
+                                    jsonapi: { version: '2021.02' }
+                                    errors: [{ status: '403', source: { pointer: '', parameter: '' }, title: Forbidden, detail: 'This action is unauthorized.' }]
+                                properties:
+                                    jsonapi: { type: object, example: { version: '2021.02' } }
+                                    errors: { type: array, example: [{ status: '403', source: { pointer: '', parameter: '' }, title: Forbidden, detail: 'This action is unauthorized.' }], items: { type: object } }
+                404:
+                    description: '404, when category not found.'
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                example:
+                                    jsonapi: { version: '2021.02' }
+                                    errors: [{ status: '404', source: { pointer: '', parameter: '' }, title: 'Not Found', detail: 'Cannot find the resource.' }]
+                                properties:
+                                    jsonapi: { type: object, example: { version: '2021.02' } }
+                                    errors: { type: array, example: [{ status: '404', source: { pointer: '', parameter: '' }, title: 'Not Found', detail: 'Cannot find the resource.' }], items: { type: object } }
+                422:
+                    description: '422, when any validation failed.'
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                example:
+                                    jsonapi: { version: '2021.02' }
+                                    errors: [{ status: '422', source: { pointer: /data/attributes/name, parameter: '' }, title: 'Invalid Attribute', detail: '{validation-error-message}' }, { status: '422', source: { pointer: /data/attributes/sort, parameter: '' }, title: 'Invalid Attribute', detail: '{validation-error-message}' }]
+                                properties:
+                                    jsonapi: { type: object, example: { version: '2021.02' } }
+                                    errors: { type: array, example: [{ status: '422', source: { pointer: /data/attributes/name, parameter: '' }, title: 'Invalid Attribute', detail: '{validation-error-message}' }, { status: '422', source: { pointer: /data/attributes/sort, parameter: '' }, title: 'Invalid Attribute', detail: '{validation-error-message}' }], items: { type: object } }
+            tags:
+                - '02. Categories'
+            requestBody:
+                required: false
+                content:
+                    application/json:
+                        schema:
+                            type: object
+                            properties:
+                                name:
+                                    type: string
+                                    description: 'The name of the category.'
+                                    example: saberLiou
+                                sort:
+                                    type: integer
+                                    description: 'The sort of the category.'
+                                    example: 0
         parameters:
             -
                 in: path
                 name: category
                 description: ''
-                example: aut
+                example: eum
                 required: true
                 schema:
                     type: string
