# routes/api.php
@@ -18,22 +18,8 @@ use Illuminate\Support\Facades\Route;
 
 Route::post('register', [AuthController::class, 'register'])->name('auth.register');
 Route::post('login', [AuthController::class, 'login'])->name('auth.login');
-Route::middleware(['auth:sanctum'])->group(function () {
-    Route::post('logout', [AuthController::class, 'logout'])->name('auth.logout');
+Route::post('logout', [AuthController::class, 'logout'])->name('auth.logout');
 
-    Route::apiResource('categories', CategoryController::class)->except([
-        'index', 'show'
-    ]);
+Route::apiResource('categories', CategoryController::class);
 
-    Route::apiResource('posts', PostController::class)->except([
-        'index', 'show'
-    ]);
-});
-
-Route::apiResource('categories', CategoryController::class)->only([
-    'index', 'show'
-]);
-
-Route::apiResource('posts', PostController::class)->only([
-    'index', 'show'
-]);
+Route::apiResource('posts', PostController::class);
